package game.control;

public enum State {
    WELCOME,
    INPUTPGN,
    INPUTFGN,
    INITPOS,
    INMATE,
    TOPLAY,
    CHECKLEGAL,
    WIN,
    DRAW,
    CLEANUP,
    EXIT
}
