package game.util;

public class Constant {
    public static final int ROW = 8;
    public static final int COL = 8;

    public static final String[][] ICONS = {{"□", "♙", "♘", "♗", "♖", "♕", "♔"}, {"■", "♟", "♞", "♝", "♜", "♛", "♚"}};
    public static final String LOGO =
            " ____  _           _                    _\n" +
            "/ ___|| |__   __ _| | ___ __ ___   __ _| |_ _   _\n" +
            "\\___ \\| '_ \\ / _` | |/ / '_ ` _ \\ / _` | __| | | |\n" +
            " ___) | | | | (_| |   <| | | | | | (_| | |_| |_| |\n" +
            "|____/|_| |_|\\__,_|_|\\_\\_| |_| |_|\\__,_|\\__|\\__, |\n" +
            "                                            |___/";
    public static final String STARTPOS = "rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR w KQkq - 0 1";
    public static final String LOPEZPOS = "r1bqkbnr/pppp1ppp/2n5/1B2p3/4P3/5N2/PPPP1PPP/RNBQK2R b KQkq - 3 3";
}
